--- a/Web Page/Dockerfile
+++ b/Web Page/Dockerfile
@@ -2,5 +2,6 @@ FROM nginx:latest
 COPY index.html /usr/share/nginx/html/index.html
 COPY main2.js /usr/share/nginx/html/main2.js
 COPY marker.png /usr/share/nginx/html/marker.png
+COPY marker2.png /usr/share/nginx/html/marker.png
 COPY tabledraw.js /usr/share/nginx/html/tabledraw.js
 COPY /style/*.* /usr/share/nginx/html/style/
